[gd_scene load_steps=5 format=3 uid="uid://bahhgk04l2vbg"]

[ext_resource type="Theme" uid="uid://8v4be764xt8s" path="res://assets/base_theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screen/credits_screen.gd" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/vazir_farsi_font.tres" id="3"]
[ext_resource type="AudioStream" uid="uid://clb13nxm4p246" path="res://assets/sfx/click.wav" id="4"]

[node name="CreditsScreen" type="PopupPanel"]
size = Vector2i(720, 1280)
exclusive = true
theme = ExtResource("1")
script = ExtResource("2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -280.0
theme_override_fonts/normal_font = ExtResource("3")
bbcode_enabled = true

[node name="CloseButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -232.0
offset_right = 196.0
offset_bottom = -132.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "Close"

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
bus = &"SFX"

[connection signal="pressed" from="Control/CloseButton" to="." method="_on_CloseButton_pressed"]
